--- a/bin/report/PerformanceReport.fxml
+++ b/bin/report/PerformanceReport.fxml
@@ -8,16 +8,15 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PerformanceReportController">
    <children>
       <Pane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <TableView fx:id="orderIDcol" layoutX="187.0" layoutY="100.0" prefHeight="200.0" prefWidth="265.0">
+            <TableView fx:id="performanceTable" layoutX="187.0" layoutY="100.0" prefHeight="200.0" prefWidth="274.0">
               <columns>
-                <TableColumn prefWidth="75.20001220703125" text="orderID" />
-                <TableColumn fx:id="expectedCol" prefWidth="108.0" text="expected time" />
-                  <TableColumn fx:id="arrivalCol" prefWidth="83.199951171875" text="arrival time" />
+                <TableColumn fx:id="restaurantCol" prefWidth="75.20001220703125" text="restaurant" />
+                <TableColumn fx:id="servedWellCol" prefWidth="108.0" text="served well" />
+                  <TableColumn fx:id="delaySupplyCol" prefWidth="89.20001220703125" text="delay supply" />
               </columns>
             </TableView>
             <Button fx:id="backButton" layoutX="534.0" layoutY="361.0" mnemonicParsing="false" onAction="#goBack" text="back" />
@@ -26,10 +25,6 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="19.0" layoutY="147.0" text="served well:" />
-            <Label layoutX="17.0" layoutY="215.0" text="not server well:" />
-            <Label fx:id="percentageOfWellServed" layoutX="128.0" layoutY="147.0" />
-            <Label fx:id="percentageOfNotServedWell" layoutX="128.0" layoutY="215.0" />
             <Label layoutX="19.0" layoutY="43.0" text="Branch:" />
             <Label layoutX="19.0" layoutY="73.0" text="Month:" />
             <Label fx:id="whichBranch" layoutX="87.0" layoutY="43.0" />
