--- a/src/gui/general/NewOrdersScreen.fxml
+++ b/src/gui/general/NewOrdersScreen.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.NewOrderScreenController">
    <children>
@@ -13,6 +12,6 @@
             <Image url="@BackgroundImage.png" />
          </image>
       </ImageView>
-      <VBox fx:id="vbox" layoutX="459.0" layoutY="136.0" prefHeight="511.0" prefWidth="308.0" />
+      <Accordion fx:id="accordion" layoutX="413.0" layoutY="140.0" prefHeight="444.0" prefWidth="454.0" />
    </children>
 </AnchorPane>
