--- a/bin/general/UserLoginScreen.fxml
+++ b/bin/general/UserLoginScreen.fxml
@@ -2,13 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserLoginController">
    <children>
@@ -33,7 +33,6 @@
                      </font>
                   </Label>
                   <TextField id="test" fx:id="username_lbl" alignment="CENTER" layoutX="310.0" layoutY="369.0" prefHeight="25.0" prefWidth="220.0" promptText="Username" />
-                  <TextField fx:id="password_lbl" alignment="CENTER" layoutX="310.0" layoutY="453.0" prefHeight="25.0" prefWidth="220.0" promptText="Password" />
                   <Button fx:id="login_btn" layoutX="386.0" layoutY="522.0" mnemonicParsing="false" onAction="#login_action" styleClass="btn" text="Login" />
                   <ImageView fitHeight="120.0" fitWidth="135.0" layoutX="277.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -56,6 +55,7 @@
                      </image>
                   </ImageView>
                   <Label fx:id="login_res_lbl" layoutX="354.0" layoutY="585.0" prefHeight="17.0" prefWidth="203.0" />
+                  <PasswordField fx:id="password_lbl" alignment="CENTER" layoutX="312.0" layoutY="454.0" prefHeight="25.0" prefWidth="220.0" promptText="Password" />
                </children>
             </AnchorPane>
          </center>
