--- a/bin/general/ApproveUserScreen.fxml
+++ b/bin/general/ApproveUserScreen.fxml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Accordion?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ApproveAcountController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ApproveAcountController">
    <children>
-      <ImageView fitHeight="800.0" fitWidth="1280.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@BackgroundImage.png" />
-         </image>
-      </ImageView>
-      <Accordion fx:id="accordion" layoutX="434.0" layoutY="116.0" prefHeight="453.0" prefWidth="412.0" />
+      <Accordion fx:id="accordion" layoutX="314.0" layoutY="120.0" prefHeight="453.0" prefWidth="412.0" />
    </children>
 </AnchorPane>
