--- a/src/gui/general/UserLoginScreen.fxml
+++ b/src/gui/general/UserLoginScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -8,57 +9,60 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserLoginController">
+
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserLoginController">
    <children>
-      <BorderPane id="borderpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0">
+      <BorderPane id="borderpane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="borderpane" stylesheets="@GeneralStyleSheet.css" VBox.vgrow="ALWAYS">
          <left>
-            <AnchorPane prefHeight="800.0" prefWidth="410.0" BorderPane.alignment="CENTER">
-               <children>
-                  <ImageView fitHeight="800.0" fitWidth="469.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@BiteMeLogo.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
+            <VBox styleClass="bitemelogo" BorderPane.alignment="CENTER" />
          </left>
          <center>
-            <AnchorPane id="anchorpane" prefHeight="200.0" prefWidth="870.0" BorderPane.alignment="CENTER">
+            <Group BorderPane.alignment="CENTER">
                <children>
-                  <Label layoutX="326.0" layoutY="95.0" text="Login">
-                     <font>
-                        <Font name="Levenim MT Bold" size="64.0" />
-                     </font>
-                  </Label>
-                  <TextField id="test" fx:id="username_lbl" alignment="CENTER" layoutX="310.0" layoutY="369.0" prefHeight="25.0" prefWidth="220.0" promptText="Username" />
-                  <Button fx:id="login_btn" layoutX="386.0" layoutY="522.0" mnemonicParsing="false" onAction="#login_action" styleClass="btn" text="Login" />
-                  <ImageView fitHeight="120.0" fitWidth="135.0" layoutX="277.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@FemaleIcon.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="120.0" fitWidth="135.0" layoutX="409.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@MaleIcon.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="25.0" fitWidth="60.0" layoutX="278.0" layoutY="369.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@UserIcon.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="20.0" fitWidth="60.0" layoutX="280.0" layoutY="456.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@LockIcon.png" />
-                     </image>
-                  </ImageView>
-                  <Label fx:id="login_res_lbl" layoutX="354.0" layoutY="585.0" prefHeight="17.0" prefWidth="203.0" />
-                  <PasswordField fx:id="password_lbl" alignment="CENTER" layoutX="312.0" layoutY="454.0" prefHeight="25.0" prefWidth="219.0" promptText="Password" />
+                  <HBox>
+                     <children>
+                        <AnchorPane id="anchorpane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="803.0" prefWidth="870.0" style="-fx-background-color: #fff;" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label layoutX="326.0" layoutY="95.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Login">
+                                 <font>
+                                    <Font name="Levenim MT Bold" size="64.0" />
+                                 </font>
+                              </Label>
+                              <TextField id="test" fx:id="username_lbl" alignment="CENTER" layoutX="310.0" layoutY="369.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="220.0" promptText="Username" />
+                              <Button fx:id="login_btn" layoutX="388.0" layoutY="522.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#login_action" prefHeight="35.0" prefWidth="64.0" styleClass="btn" text="Login" />
+                              <ImageView fitHeight="120.0" fitWidth="135.0" layoutX="277.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/FemaleIcon.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="120.0" fitWidth="135.0" layoutX="409.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/MaleIcon.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="25.0" fitWidth="60.0" layoutX="278.0" layoutY="369.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/UserIcon.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="20.0" fitWidth="60.0" layoutX="280.0" layoutY="456.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/LockIcon.png" />
+                                 </image>
+                              </ImageView>
+                              <Label fx:id="login_res_lbl" layoutX="320.0" layoutY="589.0" prefHeight="17.0" prefWidth="203.0" />
+                              <PasswordField fx:id="password_lbl" alignment="CENTER" layoutX="312.0" layoutY="454.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="219.0" promptText="Password" />
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </HBox>
                </children>
-            </AnchorPane>
+            </Group>
          </center>
       </BorderPane>
    </children>
-</AnchorPane>
+</VBox>
