--- a/src/gui/general/index2Screen.fxml
+++ b/src/gui/general/index2Screen.fxml
@@ -14,13 +14,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.IndexControllerD">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.IndexControllerD">
    <children>
-      <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0">
+      <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" VBox.vgrow="ALWAYS">
          <left>
-            <VBox prefHeight="663.0" prefWidth="270.0" BorderPane.alignment="CENTER">
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="663.0" prefWidth="270.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox alignment="CENTER" style="-fx-background-color: #F7C665;">
+                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #F7C665;" VBox.vgrow="ALWAYS">
                      <children>
                         <GridPane fx:id="options_grid1" alignment="TOP_CENTER" focusTraversable="true" maxWidth="-Infinity" prefHeight="661.0" prefWidth="150.0" style="-fx-background-color: #F7C665;">
                           <columnConstraints>
@@ -44,7 +44,7 @@
             </VBox>
          </left>
          <top>
-            <VBox BorderPane.alignment="CENTER">
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                <children>
                   <HBox prefHeight="150.0" prefWidth="1280.0">
                      <children>
@@ -63,11 +63,15 @@
                               <ComboBox fx:id="comboBoxBranch" layoutX="120.0" layoutY="91.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="32.0" prefWidth="131.0" promptText="Change branch" style="-fx-background-color: #F7C665;" />
                            </children>
                         </AnchorPane>
-                        <Label fx:id="welcome_label" text="Welcome to BiteMe" translateX="220.0" translateY="20.0">
-                           <font>
-                              <Font name="Levenim MT Bold" size="64.0" />
-                           </font>
-                        </Label>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label fx:id="welcome_label" text="Welcome to BiteMe">
+                                 <font>
+                                    <Font name="Levenim MT Bold" size="64.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
                      </children>
                   </HBox>
                   <Separator prefHeight="8.0" prefWidth="1299.0" style="-fx-background-color: #F7C665;" />
@@ -75,7 +79,7 @@
             </VBox>
          </top>
          <center>
-            <AnchorPane prefHeight="650.0" prefWidth="1010.0" BorderPane.alignment="CENTER">
+            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" BorderPane.alignment="CENTER">
                <children>
                   <VBox fx:id="pane_in_vbox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
