--- a/bin/report/ReportsScreen.fxml
+++ b/bin/report/ReportsScreen.fxml
@@ -8,9 +8,10 @@
    <children>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="viewReportButton" layoutX="345.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToViewReports" styleClass="ViewBtn" text="Monthly Reports" />
-            <Button fx:id="UploadReportsBtn" layoutX="512.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToCreateReports" styleClass="ViewBtn" text="Upload Quarter Report" />
-            <Button fx:id="viewQuarterIncome" layoutX="530.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToChooseQuarterAndBranch" styleClass="ViewBtn" text="Quarter Reports" />
+            <Button fx:id="viewReportButton" layoutX="273.0" layoutY="312.0" mnemonicParsing="false" onAction="#goToViewReports" styleClass="ViewBtn" text="Monthly Reports" />
+            <Button fx:id="UploadReportsBtn" layoutX="435.0" layoutY="312.0" mnemonicParsing="false" onAction="#goToCreateReports" styleClass="ViewBtn" text="Upload Quarter Report" />
+            <Button fx:id="viewQuarterIncome" layoutX="454.0" layoutY="312.0" mnemonicParsing="false" onAction="#goToChooseQuarterAndBranch" styleClass="ViewBtn" text="Quarter Reports" />
+            <Button fx:id="viewBranchPdfReport" layoutX="622.0" layoutY="312.0" mnemonicParsing="false" onAction="#ViewPdf" styleClass="ViewBtn" text="Branch Manager Quartely Reports" />
          </children>
       </Pane>
    </children>
