--- a/src/gui/report/ViewPdfScreen.fxml
+++ b/src/gui/report/ViewPdfScreen.fxml
@@ -4,18 +4,15 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.web.WebView?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewPdfController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewPdfController">
    <children>
-      <Pane prefHeight="662.0" prefWidth="1010.0">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
-            <ComboBox fx:id="branch_cmb" layoutX="123.0" layoutY="259.0" prefWidth="150.0" promptText="Branch" styleClass="comboBox" />
-            <ComboBox fx:id="quater_cmb" layoutX="123.0" layoutY="313.0" prefWidth="150.0" promptText="Quarter" styleClass="comboBox" />
-            <ComboBox fx:id="year_cmb" layoutX="123.0" layoutY="371.0" prefWidth="150.0" promptText="Year" styleClass="comboBox" />
-            <Button fx:id="open_btn" layoutX="331.0" layoutY="312.0" mnemonicParsing="false" onAction="#openPdf" styleClass="ViewBtn" text="Open" />
-            <WebView fx:id="webviewPdf" layoutX="422.0" layoutY="27.0" prefHeight="605.0" prefWidth="556.0" />
+            <ComboBox fx:id="branch_cmb" layoutX="430.0" layoutY="170.0" prefWidth="150.0" promptText="Branch" styleClass="comboBox" />
+            <ComboBox fx:id="quater_cmb" layoutX="430.0" layoutY="224.0" prefWidth="150.0" promptText="Quarter" styleClass="comboBox" />
+            <ComboBox fx:id="year_cmb" layoutX="430.0" layoutY="278.0" prefWidth="150.0" promptText="Year" styleClass="comboBox" />
+            <Button fx:id="open_btn" layoutX="487.0" layoutY="350.0" mnemonicParsing="false" onAction="#openPdf" styleClass="ViewBtn" text="Open" />
          </children>
       </Pane>
    </children>
