--- a/src/gui/order/OrderInformationScreen.fxml
+++ b/src/gui/order/OrderInformationScreen.fxml
@@ -44,7 +44,7 @@
                   </DatePicker>
                </children>
             </HBox>
-            <GridPane fx:id="delivery_details" hgap="10.0" layoutX="137.0" layoutY="116.0" prefHeight="375.0" prefWidth="846.0" vgap="10.0">
+            <GridPane fx:id="delivery_details" hgap="10.0" layoutX="137.0" layoutY="116.0" prefHeight="375.0" prefWidth="846.0" vgap="10.0" visible="false">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="498.0" minWidth="10.0" prefWidth="387.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="445.0" minWidth="10.0" prefWidth="429.0" />
